catkin_ws/logs/firefly_control/build.make.178.log
[  0%] Built target actionlib_generate_messages_py
[  0%] Built target bond_generate_messages_lisp
[  0%] Built target bond_generate_messages_cpp
[  0%] Built target nodelet_generate_messages_nodejs
[  0%] Built target nodelet_generate_messages_lisp
[  0%] Built target bond_generate_messages_nodejs
[  0%] Built target nodelet_generate_messages_eus
[  0%] Built target tf2_msgs_generate_messages_nodejs
[  0%] Built target tf2_msgs_generate_messages_lisp
[  0%] Built target nodelet_generate_messages_cpp
[  0%] Built target tf2_msgs_generate_messages_eus
[  0%] Built target _catkin_empty_exported_target
[  0%] Built target tf2_msgs_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_py
[  0%] Built target tf2_msgs_generate_messages_py
[  0%] Built target actionlib_msgs_generate_messages_nodejs
[  0%] Built target actionlib_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_eus
[  0%] Built target geometry_msgs_generate_messages_nodejs
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target bond_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target apriltags2_ros_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_eus
[  0%] Built target nodelet_generate_messages_py
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_nodejs
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] Built target tf_generate_messages_eus
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target bond_generate_messages_eus
[  0%] Built target sensor_msgs_generate_messages_nodejs
[  0%] Built target roscpp_generate_messages_eus
[  0%] Built target apriltags2_ros_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_nodejs
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target apriltags2_ros_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target apriltags2_ros_generate_messages_nodejs
[  0%] Built target tf_generate_messages_cpp
[  0%] Built target apriltags2_ros_generate_messages_py
[  0%] Built target actionlib_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_eus
[  0%] Built target rosgraph_msgs_generate_messages_nodejs
[  0%] Built target sensor_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target sensor_msgs_generate_messages_lisp
[  0%] Built target tf_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target tf_generate_messages_nodejs
[  0%] Built target tf_generate_messages_py
[  0%] Built target sensor_msgs_generate_messages_py
[  0%] Built target actionlib_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_eus
[  0%] Built target actionlib_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target actionlib_msgs_generate_messages_cpp
[  0%] Built target sensor_msgs_generate_messages_eus
[  0%] Built target actionlib_generate_messages_nodejs
Scanning dependencies of target control
[ 25%] Building CXX object CMakeFiles/control.dir/src/control.cpp.o
[ 75%] Built target fly
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::callback_tag(const ConstPtr&)’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:22:16: error: cannot convert ‘const _id_type {aka const std::vector<int>}’ to ‘int’ in assignment
             id = msg->detections[0].id;
                ^
CMakeFiles/control.dir/build.make:62: recipe for target 'CMakeFiles/control.dir/src/control.cpp.o' failed
CMakeFiles/Makefile2:127: recipe for target 'CMakeFiles/control.dir/all' failed
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
make[1]: *** [CMakeFiles/control.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
